# Mask-Objects-from-RGBD

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: cam_params_xtion.json  rviz_cloud_res.rviz  rviz_cloud_src.rviz  rviz_for_xtion.rviz  rviz_rgb_and_color_image.rviz  rviz_show_rgbd_and_pc.rviz
doc/: notes_RealSense.md  notes_Xtion2.md  python_notes.md
include/: detect_object_from_cloud.h  detect_object_from_rgbd.py  lib_cam_calib.py  lib_cloud.py  lib_cloud_registration.py  lib_ros_topic.py
include/my_basics/: basics.h
include/my_pcl/: pcl_advanced.h
launch/: main.launch  open_realsense.launch  rviz_for_realsense.launch  rviz_for_xtion.launch
src/: CMakeLists.txt  n0_fake_rgbd_image_publisher.py  n1_main_add_label_to_image.py
src/cpp_libs/: CMakeLists.txt  detect_object_from_cloud.cpp
src/cpp_libs/my_basics/: basics.cpp
src/cpp_libs/my_pcl/: pcl_advanced.cpp
src/nodes/: node_detect_object_from_cloud.cpp  sub_and_save_rgb_and_depth_images.py
test/: filt_cloud_and_display.py  sub_cloud_and_display_by_open3d.py  test_draw_box.py  test_read_depth_image.py  test_rgbd_odometry.py  test_rgbimg_to_cloud.py  test_show_ply_and_mesh.py
